# console_file_manager

./: CMakeLists.txt  README.md  file_handler.c  file_handler.h  main.c
